--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="top">08</div>
         <div class="bottom">08</div>
       </div>
-      <p>Days</p>
+      <p class="title">Days</p>
     </div>
 
     <div class="hours">
@@ -36,7 +36,7 @@
         <div class="top">23</div>
         <div class="bottom">23</div>
       </div>
-      <p>Hours</p>
+      <p class="title">Hours</p>
     </div>
 
     <div class="minutes">
@@ -44,7 +44,7 @@
         <div class="top">55</div>
         <div class="bottom">55</div>
       </div>
-      <p>Minutes</p>
+      <p class="title">Minutes</p>
     </div>
 
     <div class="seconds">
@@ -52,17 +52,22 @@
         <div class="top">41</div>
         <div class="bottom">41</div>
       </div>
-      <p>Seconds</p>
+      <p class="title">Seconds</p>
     </div>
   </div>
 
   <div class="footer">
     <img src="./images/pattern-hills.svg" alt="">
+    <div class="media">
+      <span class="facebook"><img src="./images/icon-facebook.svg" alt=""></span>
+      <span class="pintrest"><img src="./images/icon-pinterest.svg" alt=""></span>
+      <span class="instagram"><img src="./images/icon-instagram.svg" alt=""></span>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Rishikrishna R</a>.
+    </div>
   </div>
 
-  <div class="attribution hide">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Rishikrishna R</a>.
-  </div>
 </body>
 </html>
