--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Rishikrishna R</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/rishi1011">Rishikrishna R</a>.
     </div>
   </div>
 
